--- a/D1.3/bibliography.bib
+++ b/D1.3/bibliography.bib
@@ -7,7 +7,6 @@ number = {6},
 pages = {527-552},
 year = {2021},
 doi = {10.1177/10943420211020803},
-URL = {https://doi.org/10.1177/10943420211020803}
 }
 
 @ARTICLE{Trott2022,
@@ -29,6 +28,17 @@ volume = {33},
 number = {4},
 pages = {735-757},
 year = {2019},
-doi = {10.1177/1094342018816368},
-URL = {https://doi.org/10.1177/1094342018816368}
+doi = {10.1177/1094342018816368}
 }
+
+@article{Fischer2020,
+  doi = {10.1177/1094342020915762},
+  year = {2020},
+  volume = {34},
+  number = {5},
+  pages = {562--586},
+  author = {Paul Fischer and Misun Min and Thilina Rathnayake and Som Dutta and Tzanio Kolev and Veselin Dobrev and Jean-Sylvain Camier and Martin Kronbichler and Tim Warburton and Kasia {\'{S}}wirydowicz and Jed Brown},
+  title = {Scalability of high-performance {PDE} solvers},
+  journal = {The International Journal of High Performance Computing Applications}
+}
+
